--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -1,7 +1,7 @@
-// Minty 5.3.3
+// Zephyr 5.3.3
 // Bootswatch
 
-$theme: "minty" !default;
+$theme: "zephyr" !default;
 
 //
 // Color system
@@ -9,91 +9,147 @@ $theme: "minty" !default;
 
 $white:    #fff !default;
 $gray-100: #f8f9fa !default;
-$gray-200: #f7f7f9 !default;
-$gray-300: #eceeef !default;
+$gray-200: #e9ecef !default;
+$gray-300: #dee2e6 !default;
 $gray-400: #ced4da !default;
-$gray-500: #aaa !default;
-$gray-600: #888 !default;
-$gray-700: #5a5a5a !default;
+$gray-500: #adb5bd !default;
+$gray-600: #6c757d !default;
+$gray-700: #495057 !default;
 $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 $black:    #000 !default;
 
-$blue:    #007bff !default;
+$blue:    #3459e6 !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
-$pink:    #e83e8c !default;
-$red:     #ff7851 !default;
-$orange:  #fd7e14 !default;
-$yellow:  #ffce67 !default;
-$green:   #56cc9d !default;
+$pink:    #d63384 !default;
+$red:     #da292e !default;
+$orange:  #f8765f !default;
+$yellow:  #f4bd61 !default;
+$green:   #2fb380 !default;
 $teal:    #20c997 !default;
-$cyan:    #6cc3d5 !default;
+$cyan:    #287bb5 !default;
 
-$primary:       #78c2ad !default;
-$secondary:     #f3969a !default;
+$primary:       $blue !default;
+$secondary:     $white !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
 $light:         $gray-100 !default;
-$dark:          $gray-800 !default;
+$dark:          $gray-900 !default;
 
-$min-contrast-ratio:   1.45 !default;
+$min-contrast-ratio:   1.65 !default;
+
+$enable-shadows:              true !default;
 
 // Body
 
-$body-color:                $gray-600 !default;
+$body-color:                $gray-700 !default;
 
-// Components
-
-$border-radius:               .4rem !default;
-$border-radius-lg:            .6rem !default;
-$border-radius-sm:            .3rem !default;
+$headings-color:              var(--bs-primary-color) !default;
 
 // Fonts
 
 // stylelint-disable-next-line value-keyword-case
-$headings-font-family:        Montserrat, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !default;
-$headings-color:              $gray-700 !default;
+$font-family-sans-serif:      Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$font-size-base:              1rem !default; // Assumes the browser default, typically `16px`
+$font-size-sm:                $font-size-base * .875 !default;
+
+// Components
+
+$box-shadow:                  0 1px 2px rgba($black, .05) !default;
+$box-shadow-lg:               0 1px 3px 0 rgba(0, 0, 0, .1), 0 1px 2px 0 rgba(0, 0, 0, .06) !default;
 
 // Tables
 
-$table-border-color:          rgba(0, 0, 0, .05) !default;
+$table-cell-padding-y:        1rem !default;
+$table-cell-padding-x:        1rem !default;
+$table-cell-padding-y-sm:     .5rem !default;
+$table-cell-padding-x-sm:     .5rem !default;
 
-$table-bg-scale:              0% !default;
+$table-th-font-weight:        500 !default;
 
-// Dropdowns
+// Buttons + Forms
 
-$dropdown-link-hover-color:         $white !default;
-$dropdown-link-hover-bg:            $secondary !default;
+$input-btn-padding-y:         .5rem !default;
+$input-btn-padding-x:         1rem !default;
+$input-btn-font-size:         $font-size-sm !default;
+
+// Buttons
+
+$btn-font-weight:             500 !default;
+$btn-box-shadow:              $box-shadow !default;
+$btn-focus-box-shadow:        $box-shadow !default;
+$btn-active-box-shadow:       $box-shadow !default;
+
+// Forms
+
+$form-label-font-weight:                500 !default;
+
+$input-box-shadow:                      $box-shadow !default;
+
+// Navs
+
+$nav-link-color:                    $body-color !default;
+$nav-link-hover-color:              $body-color !default;
+
+$nav-tabs-border-radius:            0 !default;
+$nav-tabs-link-active-color:        $primary !default;
 
 // Navbar
 
+$navbar-padding-y:                  .85rem !default;
+
+$navbar-nav-link-padding-x:         .75rem !default;
+
+// Dropdowns
+
+$dropdown-font-size:                $font-size-sm !default;
+$dropdown-border-color:             $gray-300 !default;
+$dropdown-divider-bg:               $gray-200 !default;
+
+$dropdown-link-hover-color:         $white !default;
+$dropdown-link-hover-bg:            $primary !default;
+
+$dropdown-item-padding-y:           .5rem !default;
+$dropdown-item-padding-x:           1rem !default;
+
 // Pagination
 
-$pagination-color:                  $white !default;
-$pagination-bg:                     $primary !default;
-$pagination-border-color:           $primary !default;
-$pagination-hover-color:            $white !default;
-$pagination-hover-bg:               $secondary !default;
-$pagination-hover-border-color:     $pagination-hover-bg !default;
-$pagination-active-bg:              $secondary !default;
-$pagination-active-border-color:    $pagination-active-bg !default;
-$pagination-disabled-color:         $white !default;
-$pagination-disabled-bg:            #cce8e0 !default;
-$pagination-disabled-border-color:  $pagination-disabled-bg !default;
+$pagination-padding-y:              .5rem !default;
+$pagination-padding-x:              1rem !default;
 
-// Alerts
+$pagination-color:                  var(--bs-primary-bg) !default;
 
-$alert-color-scale:                 0% !default;
-$alert-bg-scale:                    0% !default;
+$pagination-focus-color:            $pagination-color !default;
+
+$pagination-hover-color:            $pagination-color !default;
+$pagination-hover-bg:               var(--bs-secondary-bg) !default;
+
+$pagination-disabled-color:         var(--bs-tertiary-color) !default;
+$pagination-disabled-bg:            var(--bs-tertiary-bg) !default;
+
+// Cards
+$card-spacer-x:                     1.5rem !default;
+$card-cap-padding-y:                1rem !default;
+$card-cap-padding-x:                1.5rem !default;
+
+// Toasts
+
+$toast-header-color:                $headings-color !default;
+
+// Modals
+
+$modal-header-border-width:         0 !default;
+
+// List group
+
+$list-group-item-padding-y:         1rem !default;
+$list-group-item-padding-x:         1.5rem !default;
 
 // Breadcrumbs
 
-$breadcrumb-padding-y:              .375rem !default;
-$breadcrumb-padding-x:              .75rem !default;
-$breadcrumb-bg:                     $primary !default;
-$breadcrumb-divider-color:          $white !default;
-$breadcrumb-active-color:           $breadcrumb-divider-color !default;
-$breadcrumb-border-radius:          .25rem !default;
+$breadcrumb-padding-x:              1rem !default;
+
+$breadcrumb-divider:                quote(">") !default;
