--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -1,123 +1,133 @@
-// dashboard.jade
-
 doctype html
-html(lang='zh-CN')
-
+html(lang="zh-CN")
   head
-    meta(charset='UTF-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    meta(charset="UTF-8")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title 仪表盘
-
-    // Bootstrap CSS
-    link(href='/assets/css/bootstrap.min.css', rel='stylesheet')
-    link(href='/assets/css/bootstrap-icons.min.css', rel='stylesheet')
-
-    // Custom CSS
-    link(href='/assets/css/meowdream-colors.css', rel='stylesheet')
-    link(href='/assets/css/meowdream-login-window.css', rel='stylesheet')
-    link(href='/assets/css/meowdream-better-links.css', rel='stylesheet')
-
-    // Custom styles
+    //- Bootstrap CSS
+    link(href="/assets/css/bootstrap.min.css", rel="stylesheet")
+    link(href="/assets/css/bootstrap-icons.min.css", rel="stylesheet")
+    //- Custom CSS
+    link(href="/assets/css/meowdream-colors.css", rel="stylesheet")
+    link(href="/assets/css/meowdream-login-window.css", rel="stylesheet")
+    link(href="/assets/css/meowdream-better-links.css", rel="stylesheet")
+    //- Custom styles
     style.
       .roundButton {
-        width: 40px;
-        height: 40px;
-        background-color: var(--gray-500);
-        position: fixed;
-        border: none;
-        cursor: pointer;
-        outline: none;
-        padding: 0px;
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.4);
+          width: 40px;
+          height: 40px;
+          background-color: var(--gray-500);
+          position: fixed;
+          border: none;
+          cursor: pointer;
+          outline: none;
+          padding: 0px;
+          box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.4);
       }
+
       #openListButton {
-        z-index: 10;
-        bottom: 32px;
-        right: 32px;
+          z-index: 10;
+          bottom: 32px;
+          right: 32px;
       }
+
       @media (min-width: 768px) {
-        #openListButton {
-          display: none;
-        }
-        .sidebar {
-          width: 16.6667%; /* col-md-2 width */
-          max-width: 16.6667%;
-        }
-        #offcanvas-close-button {
-          display: none;
-        }
+          #openListButton {
+              display: none;
+          }
+          .sidebar {
+              width: 16.6667%;
+              /* col-md-2 width */
+              max-width: 16.6667%;
+          }
+          #offcanvas-close-button {
+              display: none;
+          }
       }
+
       @media (max-width: 768px) {
-        .sidebar {
-          width: 100%;
-          max-width: 100%;
-        }
+          .sidebar {
+              width: 100%;
+              max-width: 100%;
+          }
+      }
+
+      .offcanvas-body {
+          display: flex;
+          flex-direction: column;
+          height: 100%;
+          justify-content: space-between;
+      }
+
+      .dropdown {
+          margin-top: auto;
       }
 
   body
-    // Sidebar as Offcanvas
-    .offcanvas.offcanvas-start.sidebar(data-bs-scroll='true', data-bs-backdrop='false', tabindex='-1', id='listOffcanvas', aria-labelledby='listOffcanvasLabel')
+    //- Sidebar as Offcanvas
+    .offcanvas.offcanvas-start.sidebar(data-bs-scroll="true", data-bs-backdrop="false", tabindex="-1", id="listOffcanvas", aria-labelledby="listOffcanvasLabel")
       .offcanvas-header
-        a(href='/dashboard.html', class='align-items-center link-dark text-decoration-none')
+        a(href="/dashboard", class="align-items-center link-dark text-decoration-none")
           span.mx-2.fs-4
             i.bi-gear
             span.mx-1 仪表盘
-        button.btn-close.text-reset(type='button', data-bs-dismiss='offcanvas', aria-label='Close', id='offcanvas-close-button')
+        button.btn-close.text-reset(data-bs-dismiss="offcanvas", aria-label="Close", id="offcanvas-close-button")
       .offcanvas-body
-        hr
-        ul.nav.nav-pills.flex-column.mb-auto
-          li.nav-item
-            a.nav-link.active(aria-current='page', href='#')
-              i.bi-house
-              span.mx-1 概览
-          li
-            a.nav-link.link-dark(href='#')
-              i.bi-server
-              span.mx-1 实例
-          li
-            a.nav-link.link-dark(href='#')
-              i.bi-wallet2
-              span.mx-1 财务
-        hr
-        .dropdown
-          a.d-flex.align-items-center.link-dark.text-decoration-none.dropdown-toggle(id='dropdownUser2', href='#', aria-expanded='false', data-bs-toggle='dropdown')
-            img.rounded-circle(src='https://github.com/mdo.png', alt='', width='32', height='32', class='me-2')
-            strong mdo
-          ul.dropdown-menu.text-small.shadow(aria-labelledby='dropdownUser2')
+        div
+          hr
+          ul.nav.nav-pills.flex-column.mb-auto
+            li.nav-item
+              a.nav-link.active(href="#", aria-current="page")
+                i.bi-house
+                span.mx-1 概览
             li
-              a.dropdown-item(href='#')
+              a.nav-link.link-dark(href="#")
+                i.bi-server
+                span.mx-1 实例
+            li
+              a.nav-link.link-dark(href="#")
+                i.bi-wallet2
+                span.mx-1 财务
+          hr
+        .dropdown
+          a.d-flex.align-items-center.link-dark.text-decoration-none.dropdown-toggle(href="#", id="dropdownUser2", data-bs-toggle="dropdown", aria-expanded="false")
+            img(src="/assets/image/default-avatar.png", alt="", width="32", height="32", class="rounded-circle me-2")
+            strong#user-nickname 111
+          ul.dropdown-menu.text-small.shadow(aria-labelledby="dropdownUser2")
+            li
+              a.dropdown-item(href="#")
                 i.bi-gear
                 span.mx-1 管理
             li
               hr.dropdown-divider
             li
-              a.dropdown-item(href='#')
+              a.dropdown-item(href="#", id="logoutButton", hx-target="#main-frame", hx-get="/loader.html", hx-trigger="click", hx-swap="innerHTML")
                 i.bi-box-arrow-right
                 span.mx-1 退出
 
-    // Button to open sidebar
-    button#openListButton.roundButton.rounded-circle.btn(type='button', data-bs-toggle='offcanvas', data-bs-target='#listOffcanvas', aria-controls='listOffcanvas')
-      i.bi-list(style='color: white;')
+    //- Button to open sidebar
+    button#openListButton.roundButton.rounded-circle.btn(type="button", data-bs-toggle="offcanvas", data-bs-target="#listOffcanvas", aria-controls="listOffcanvas")
+      i.bi-list(style="color: white;")
 
-    // Main content area
-    .container-fluid.col-md-10.offset-md-2#main-frame(hx-get='' hx-trigger='load')
-      // Your main content goes here
-      h1 Loading...
+    //- Main content area
+    #main-frame.container-fluid.col-md-10.offset-md-2(hx-get="#{redirectTarget}", hx-trigger="load")
+      //- Your main content goes here
+      h1 加载中
 
-    // Bootstrap Bundle with Popper
-    script(src='/assets/js/bootstrap.bundle.min.js')
-    // htmx
-    script(src='/assets/js/htmx.min.js')
-    // jQuery
-    script(src='/assets/js/jquery-3.7.1.min.js')
-    // CryptoJS
-    script(src='/assets/js/crypto-js.min.js')
-    // Custom scripts
+    //- Bootstrap Bundle with Popper
+    script(src="/assets/js/bootstrap.bundle.min.js")
+    //- htmx
+    script(src="/assets/js/htmx.min.js")
+    //- jQuery
+    script(src="/assets/js/jquery-3.7.1.min.js")
+    //- CryptoJS
+    script(src="/assets/js/crypto-js.min.js")
+    //- Custom scripts
     script.
       document.addEventListener('DOMContentLoaded', function() {
           const offcanvasElement = document.getElementById('listOffcanvas');
           const openListButton = document.getElementById('openListButton');
-  
+
           function handleResize() {
               if (window.innerWidth < 768) {
                   offcanvasElement.classList.remove('show');
@@ -129,8 +139,23 @@ html(lang='zh-CN')
                   openListButton.style.display = 'none';
               }
           }
-  
+
           window.addEventListener('resize', handleResize);
           handleResize();
-      });
 
+          const nicknameElement = document.getElementById('user-nickname');
+
+          fetch('/api/user/mgr/info')
+              .then(response => {
+                  if (!response.ok) {
+                      throw new Error('Network response was not ok');
+                  }
+                  return response.json();
+              })
+              .then(data => {
+                  nicknameElement.textContent = data.nickname;
+              })
+              .catch(error => {
+                  nicknameElement.textContent = '请求错误';
+              });
+      });
